--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,10 @@
 fastapi==0.104.1
 uvicorn==0.24.0
-tensorflow==2.15.0
-pillow==10.1.0
+tensorflow
+pillow
 python-multipart==0.0.6
 requests==2.31.0
+opencv-python==4.10.0.84
+matplotlib==3.8.2
+numpy
+scipy
